organ/deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: organ
  name: organ

spec:
  selector:
    matchLabels:
      app: organ

  template:
    metadata:
      labels:
        app: organ

    spec:
      containers:
        - image: ghcr.io/wgbh-mla/organ:main
          imagePullPolicy: Always
          name: organ
          command:
            [
              'gunicorn',
              'organ.app:app',
              '-b',
              '0.0.0.0:8000',
              '--workers',
              '2',
              '--worker-class',
              'uvicorn.workers.UvicornWorker',
              '--forwarded-allow-ips',
              '*',
              '--access-logfile',
              '-',
              '--error-logfile',
              '-',
              '--timeout',
              '60',
            ]
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 20m
              memory: 20Mi
