organ/ingress-staging.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: organ-ingress-staging
  annotations:
   cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  tls:
   - hosts:
     - demo.organ.wgbh-mla.org
     secretName: organ-staging-tls
  rules:
  - host: demo.organ.wgbh-mla.org
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: organ
              port:
                number: 80
